src/styles/components/aside.module.scss
@import '../base';

.aside {
    background-color: #1d1f22;

    position: fixed;
    top: 0;
    left: 0;
    width: 270px;
    height: 100vh;
    z-index: 10;

    display: flex;
    flex-direction: column;

    padding: 2.4rem;

    transition: $sidebar-transition;
    transform: translateX(-270px);

    &.open {
        transform: translateX(0);
    }

    h1 {
        display: none;
        margin-bottom: 3.2rem;

        font-size: 1.8rem;
        letter-spacing: 4.2px;

        @include tablet {
            display: block;
        }
    }

    header {
        margin-bottom: 1.6rem;

        h2 {
            color: #7c8187;
            margin-bottom: 2.4rem;
            font-family: $font-sans-primary;
            font-size: 1.6rem;
            letter-spacing: 2.4px;
        }

        button {
            width: 100%;
        }
    }
}

.documentsList {
    list-style: none;
    overflow-y: scroll;

    &::-webkit-scrollbar {
        display: none;
    }

    .documentItem {
        display: flex;
        align-items: center;
        gap: 1.6rem;

        border-radius: 6px;
        padding: 1.2rem 2.4rem;
        cursor: pointer;

        transition: all 0.3s ease;

        &.active {
            background-color: rgba(255, 255, 255, 0.08);
        }

        &:not(.active):hover {
            background-color: hsla(0, 0%, 100%, 0.04);
            transform: scale(98%);
        }

        .date {
            display: block;
            font-size: 1.4rem;
            margin-bottom: 0.6rem;
            color: #7c8187;
        }

        .name {
            font-size: 1.6rem;
        }

        &:not(:last-child) {
            margin-bottom: 0.8rem;
        }
    }
}

.themeToggleBox {
    position: absolute;
    bottom: 3rem;

    display: flex;
    align-items: center;
    gap: 2rem;

    svg {
        fill: #5a6069;
        margin-top: 20px;

        &.active {
            fill: $color-white;
        }
    }

    input[type='checkbox'] {
        height: 0;
        width: 0;
        visibility: hidden;

        &:checked + label {
            background-color: $color-accent;

            &::after {
                left: calc(100% - 5px);
                transform: translateX(-100%);
            }
        }
    }

    label {
        position: relative;
        display: block;
        cursor: pointer;

        width: 6rem;
        height: 3rem;
        border-radius: 100px;

        background: grey;

        &::after {
            content: '';
            position: absolute;
            top: 5px;
            left: 5px;

            width: 16px;
            height: 16px;
            border-radius: 90px;

            background: #fff;
            transition: all 0.3s;
        }

        &:active::after {
            width: 25px;
        }
    }
}

